# autopost

./: .gitignore  Makefile  README.md  autopost.example.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
autopost/: _cli.py  _config.py
autopost/_backend/: __init__.py  bluesky.py  dummy.py  interface.py  mastodon.py  reddit.py  twitter.py
