[project]
name = "autopost"
dynamic = ["version"]
description = "Auto-posts social media updates"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "William Woodruff", email = "william@yossarian.net" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
]
dependencies = [
  "atproto ~= 0.0.30",
  "feedparser ~= 6.0",
  "praw >= 7.6.1,< 7.9.0",
  "Mastodon.py >= 1.7,< 1.9",
  "pydantic >= 1.10,< 3.0",
  "python-frontmatter ~= 1.0",
  "result ~= 0.8",
  "rich >= 12.5.1,< 13.10.0",
  "python-twitter ~= 3.5",
]
requires-python = ">=3.11"

[tool.setuptools.dynamic]
version = { attr = "autopost.__version__" }

[project.urls]
Homepage = "https://pypi.org/project/autopost/"
Issues = "https://github.com/woodruffw/autopost/issues"
Source = "https://github.com/woodruffw/autopost"

[project.scripts]
autopost = "autopost._cli:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pretend"]
lint = ["bandit", "interrogate", "mypy", "ruff"]
dev = ["build", "autopost[test,lint]"]

[tool.interrogate]
exclude = ["env", "test", "codegen"]
ignore-semiprivate = true
fail-under = 100

[tool.mypy]
plugins = ["pydantic.mypy"]

allow_redefinition = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
sqlite_cache = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
exclude_dirs = ["./test"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
